--- a/src/app/flights/flights-find/flights-find.component.html
+++ b/src/app/flights/flights-find/flights-find.component.html
@@ -4,11 +4,8 @@
       <mat-option value="One Way" (click)="onChangeTrip()">
         One Way
       </mat-option>
-      <mat-option value="Round Trip" (click)="onChangeTrip()"> 
+      <mat-option value="Round Trip" (click)="onChangeTrip()">
         Round Trip
-      </mat-option>
-      <mat-option value="Multi City" (click)="onChangeTrip()">
-        Multi City
       </mat-option>
     </mat-select>
   </mat-form-field>
@@ -27,7 +24,8 @@
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width" style="width: 22%; margin-right:15px">
-    <input matInput type="text" placeholder="Departure:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="departure_input">
+    <input matInput type="text" placeholder="Departure:" aria-label="Number" [formControl]="myControl"
+      [matAutocomplete]="auto" [(ngModel)]="departure_input">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{option}}
@@ -35,7 +33,8 @@
     </mat-autocomplete>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 22%; margin-right:40px">
-    <input matInput type="text" placeholder="To:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="arrival_input">
+    <input matInput type="text" placeholder="To:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto"
+      [(ngModel)]="arrival_input">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{option}}
@@ -52,8 +51,11 @@
     <mat-datepicker-toggle matSuffix [for]="arr"></mat-datepicker-toggle>
     <mat-datepicker #arr></mat-datepicker>
   </mat-form-field>
-  <button class="mat-elevation-z5" style="float: right; margin-right: 15px; border-radius: 20px;" mat-raised-button color="primary" (click)="onFindFlight()">Search Flight</button>
+  <button class="mat-elevation-z5" style="float: right; margin-right: 15px; border-radius: 20px;" mat-raised-button
+    color="primary" (click)="onFindFlight()">Search Flight</button>
 </mat-card>
+
+<!-- if choosing one way trip -->
 <mat-card class="mat-elevation-z5" *ngIf="trip === 'One Way'">
   <mat-form-field class="example-full-width" style="width: 10%; margin-right:15px">
     <mat-select placeholder="Trip" [(ngModel)]="trip_input">
@@ -63,9 +65,6 @@
       <mat-option value="Round Trip" (click)="onChangeTrip()">
         Round Trip
       </mat-option>
-      <mat-option value="Multi City" (click)="onChangeTrip()">
-        Multi City
-      </mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 10%; margin-right:15px">
@@ -83,7 +82,8 @@
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width" style="width: 22%; margin-right:15px">
-    <input matInput type="text" placeholder="Departure:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="departure_input">
+    <input matInput type="text" placeholder="Departure:" aria-label="Number" [formControl]="myControl"
+      [matAutocomplete]="auto" [(ngModel)]="departure_input">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{option}}
@@ -91,7 +91,8 @@
     </mat-autocomplete>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 22%; margin-right:40px">
-    <input matInput type="text" placeholder="To:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="arrival_input">
+    <input matInput type="text" placeholder="To:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto"
+      [(ngModel)]="arrival_input">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{option}}
@@ -103,56 +104,6 @@
     <mat-datepicker-toggle matSuffix [for]="dep"></mat-datepicker-toggle>
     <mat-datepicker #dep></mat-datepicker>
   </mat-form-field>
-  <button class="mat-elevation-z5" style="float: right; margin-right: 15px; border-radius: 20px;" mat-raised-button color="primary" (click)="onFindFlight()">Search Flight</button>
-</mat-card>
-<mat-card class="mat-elevation-z5" *ngIf="trip === 'Multi City'">
-  <mat-form-field class="example-full-width" style="width: 10%; margin-right:15px">
-    <mat-select placeholder="Trip" [(ngModel)]="trip_input">
-      <mat-option value="One Way" (click)="onChangeTrip()">
-        One Way
-      </mat-option>
-      <mat-option value="Round Trip" (click)="onChangeTrip()">
-        Round Trip
-      </mat-option>
-      <mat-option value="Multi City" (click)="onChangeTrip()">
-        Multi City
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field class="example-full-width" style="width: 10%; margin-right:15px">
-    <mat-select placeholder="Class" [(ngModel)]="class_input">
-      <mat-option value="Economy">
-        Economy
-      </mat-option>
-      <mat-option value="Business">
-        Business
-      </mat-option>
-      <mat-option value="First Class">
-        First Class
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <br>
-  <mat-form-field class="example-full-width" style="width: 22%; margin-right:15px">
-    <input matInput type="text" placeholder="Departure:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="departure_input">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-  <mat-form-field class="example-full-width" style="width: 22%; margin-right:40px">
-    <input matInput type="text" placeholder="To:" aria-label="Number" [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="arrival_input">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-  <mat-form-field class="example-full-width" style="width: 34%; margin-right:15px">
-    <input matInput [matDatepicker]="dep" placeholder="Date of departure:" [min]="minDate" [(ngModel)]="departure_date_input">
-    <mat-datepicker-toggle matSuffix [for]="dep"></mat-datepicker-toggle>
-    <mat-datepicker #dep></mat-datepicker>
-  </mat-form-field>
-  <button class="mat-elevation-z5" style="float: right; margin-right: 15px; border-radius: 20px;" mat-raised-button color="primary" (click)="onFindFlight()">Search Flight</button>
+  <button class="mat-elevation-z5" style="float: right; margin-right: 15px; border-radius: 20px;" mat-raised-button
+    color="primary" (click)="onFindFlight()">Search Flight</button>
 </mat-card>
