Using Routing now

--- a/src/app/flights/flights-list/flights-list.component.html
+++ b/src/app/flights/flights-list/flights-list.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <mat-accordion multi="true" *ngIf="flights.length > 0">
   <mat-expansion-panel class="mat-elevation-z5" *ngFor="let flight of flights">
     <mat-expansion-panel-header>
