--- a/src/app/flights/flights-find/flights-find.component.html
+++ b/src/app/flights/flights-find/flights-find.component.html
@@ -1,14 +1,4 @@
-<section>
-	<div class="wrapper">
-	 <h1 class="gamma lato thin uppercase ls-xlarge">
-     <span class="epsilon ls-medium">Next Generation Airline</span><br>
-		 <span class="open-sans tera ls-xlarge bold">NGADS</span><br>
-		 <span class="epsilon ls-medium">Data Exchange Simulator</span>
-		</h1>
-	 </div>
-</section>
-  
-<mat-card class="mat-elevation-z5">
+<mat-card class="mat-elevation-z5" [@changeDivSize]=currentState>
   <br>
   <mat-radio-group placeholder="Trip" style="width: 45%; margin-right:15px" [(ngModel)]="trip_input">
     <mat-radio-button value="Round Trip" (click)="onChangeTrip()" style="margin-right:15px">Round Trip</mat-radio-button>
@@ -23,6 +13,7 @@
         {{option}}
       </mat-option>
     </mat-autocomplete>
+    <mat-error *ngIf="!departure_input">Please enter a valid airport.</mat-error>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 49%">
     <input matInput type="text" placeholder="Flying To:" aria-label="Number" [formControl]="myControl"
@@ -32,17 +23,20 @@
         {{option}}
       </mat-option>
     </mat-autocomplete>
+    <mat-error *ngIf="!arrival_input">Please enter a valid airport.</mat-error>
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width" style="width: 38%; margin-right:2%">
     <input matInput [matDatepicker]="dep" placeholder="Date of departure:" [min]="minDate" [(ngModel)]="departure_date_input" required>
     <mat-datepicker-toggle matSuffix [for]="dep"></mat-datepicker-toggle>
     <mat-datepicker #dep></mat-datepicker>
+    <mat-error *ngIf="!departure_date_input">Please enter a valid date.</mat-error>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 38%; margin-right:2%" *ngIf="trip_input === 'Round Trip'">
     <input matInput [matDatepicker]="arr" placeholder="Date of arrival:" [min]="minDate" [(ngModel)]="arrival_date_input" required>
     <mat-datepicker-toggle matSuffix [for]="arr"></mat-datepicker-toggle>
     <mat-datepicker #arr></mat-datepicker>
+    <mat-error *ngIf="!arrival_date_input">Please enter a valid date.</mat-error>
   </mat-form-field>
   <mat-form-field class="example-full-width" style="width: 20%">
     <mat-select placeholder="Class" [(ngModel)]="class_input" required>
@@ -60,4 +54,4 @@
   <br>
   <mat-error *ngIf="error === true" required>Please <strong>fill</strong> the form!*</mat-error>
   <button mat-flat-button color="primary" (click)="onFindFlight()">SEARCH FLIGHT</button>
-</mat-card>
+</mat-card> 
