--- a/src/app/flights/flights-list/flights-list.component.css
+++ b/src/app/flights/flights-list/flights-list.component.css
@@ -1,10 +1,37 @@
-div {
+.div_class {
     width: 800px;
-    margin-top: 5%;
+    margin-top: 70px;
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     border-radius: 0px;
 }
 
+mat-spinner {
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
 
+mat-paginator {
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+}
+
+.example-viewport {
+    margin-top: 70px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    height: 570px;
+    width: 800px;
+    border: 0px solid black;
+    background-color: rgb(255, 255, 255);
+  }
+  
+  .example-item {
+    height: 50px;
+  }
