--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -23,6 +23,6 @@
             <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
         </mat-form-field>
         <br>
-        <button mat-raised-button color="primary" type="submit">Signup</button>
+        <button mat-raised-button color="primary" type="submit" *ngIf="!isLoading">Signup</button>
     </form>
 </mat-card>
