--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,20 +7,22 @@
     <span class="spacer"></span>
     <ul>
         <li *ngIf="userisAunthenticated">
-            <h4>Welcome Back</h4> <!--todo: use user's real name-->
+            Welcome Back {{ first_name }} {{ last_name }}
         </li>
         <li *ngIf="!userisAunthenticated">
             <a mat-button routerLink="/signup" routerLinkActive="mat-accent">
-                <mat-icon>person_add</mat-icon>signup
+                <mat-icon>person_add</mat-icon> signup
             </a>
         </li>
         <li *ngIf="!userisAunthenticated">
             <a mat-button routerLink="/login" routerLinkActive="mat-accent">
-                <mat-icon>account_circle</mat-icon>login
+                <mat-icon>account_circle</mat-icon> login
             </a>
         </li>
         <li *ngIf="userisAunthenticated">
-            <button mat-buton (click)="onLogout()">Logout</button>
+            <a mat-button (click)="onLogout()" routerLinkActive="mat-accent">
+                <mat-icon>power_settings_new</mat-icon> logout
+            </a>
         </li>
     </ul>
 </mat-toolbar>
