--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,20 @@
 <mat-toolbar class="transparent-background fixed-header" color="primary">
+    
     <span>
-        <a mat-button routerLink="/">
+        NGDS
+        <a mat-button (click)="onSearch()">
             <mat-icon>search</mat-icon>Search
+        </a>
+        <a mat-button (click)="onAboutUs()">
+                <mat-icon>book</mat-icon>About Us
         </a>
     </span>
     <span class="spacer"></span>
     <ul>
         <li *ngIf="userisAunthenticated">
-            Welcome Back {{ first_name }} {{ last_name }}
+            <a mat-button disabled>
+                <mat-icon>account_circle</mat-icon> {{ first_name }} {{ last_name }}
+            </a>
         </li>
         <li *ngIf="!userisAunthenticated">
             <a mat-button routerLink="/signup" routerLinkActive="mat-accent">
@@ -22,6 +29,11 @@
         <li *ngIf="userisAunthenticated">
             <a mat-button (click)="onLogout()" routerLinkActive="mat-accent">
                 <mat-icon>power_settings_new</mat-icon> logout
+            </a>
+        </li>
+        <li>
+            <a mat-button (click)="onBooking()" routerLinkActive="mat-accent">
+                <mat-icon [matBadge]="badge">shopping_cart</mat-icon>
             </a>
         </li>
     </ul>
