--- a/src/app/flights/flights-find/flights-find.component.css
+++ b/src/app/flights/flights-find/flights-find.component.css
@@ -1,14 +1,13 @@
 mat-card {
-    width: 570px;
-    margin-top: 14%;
-    margin-left: 45%;
+    width: 40em;
+    margin-top: 12em;
+    margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    border-radius: 0px;
 }
 
 button {
-    width: 570px;
+    width: 100%;
     height: 50px;
 }
 
