--- a/src/app/flights/flights-find/flights-find.component.html
+++ b/src/app/flights/flights-find/flights-find.component.html
@@ -1,10 +1,10 @@
 <mat-card class="mat-elevation-z5" [@changeDivSize]=currentState>
   <br>
   <mat-radio-group placeholder="Trip" style="width: 45%; margin-right:15px" [(ngModel)]="trip_input">
-    <mat-radio-button value="Round Trip" (click)="onChangeTrip()" style="margin-right:15px">Round Trip</mat-radio-button>
-    <mat-radio-button value="One Way" (click)="onChangeTrip()">One Way</mat-radio-button>
+    <mat-radio-button value="One Way" (click)="onChangeTrip()" style="margin-right:15px">One Way</mat-radio-button>
+    <mat-radio-button value="Round Trip" (click)="onChangeTrip()">Round Trip</mat-radio-button>
   </mat-radio-group>
-  <br><br>
+  <br><br><mat-divider></mat-divider><br>
   <mat-form-field class="example-full-width" style="width: 49%; margin-right:2%">
     <input matInput type="text" placeholder="Flying From:" aria-label="Number" [formControl]="myControl"
       [matAutocomplete]="auto" [(ngModel)]="departure_input" required>
@@ -26,7 +26,13 @@
     <mat-error *ngIf="!arrival_input">Please enter a valid airport.</mat-error>
   </mat-form-field>
   <br>
-  <mat-form-field class="example-full-width" style="width: 38%; margin-right:2%">
+  <mat-form-field class="example-full-width" style="width: 38%; margin-right:2%" *ngIf="trip_input === 'Round Trip'">
+      <input matInput [matDatepicker]="dep" placeholder="Date of departure:" [min]="minDate" [(ngModel)]="departure_date_input" required>
+      <mat-datepicker-toggle matSuffix [for]="dep"></mat-datepicker-toggle>
+      <mat-datepicker #dep></mat-datepicker>
+      <mat-error *ngIf="!departure_date_input">Please enter a valid date.</mat-error>
+    </mat-form-field>
+  <mat-form-field class="example-full-width" style="width: 78%; margin-right:2%" *ngIf="trip_input === 'One Way'">
     <input matInput [matDatepicker]="dep" placeholder="Date of departure:" [min]="minDate" [(ngModel)]="departure_date_input" required>
     <mat-datepicker-toggle matSuffix [for]="dep"></mat-datepicker-toggle>
     <mat-datepicker #dep></mat-datepicker>
@@ -38,17 +44,11 @@
     <mat-datepicker #arr></mat-datepicker>
     <mat-error *ngIf="!arrival_date_input">Please enter a valid date.</mat-error>
   </mat-form-field>
-  <mat-form-field class="example-full-width" style="width: 20%">
+  <mat-form-field class="example-full-width" style="width: 20%; float: right">
     <mat-select placeholder="Class" [(ngModel)]="class_input" required>
-      <mat-option value="Economy">
-        Economy
-      </mat-option>
-      <mat-option value="Business">
-        Business
-      </mat-option>
-      <mat-option value="First Class">
-        First Class
-      </mat-option>
+      <mat-option value="Economy">Economy</mat-option>
+      <mat-option value="Business">Business</mat-option>
+      <mat-option value="First Class">First Class</mat-option>
     </mat-select>
   </mat-form-field>
   <br>
